--- a/build.gradle
+++ b/build.gradle
@@ -3,13 +3,21 @@ plugins {
 }
 
 group 'cz.majksa.commons'
-version '0.0.1'
+version '1.0.0'
 
 repositories {
     mavenCentral()
 }
 
 dependencies {
+    implementation group: 'org.jetbrains', name: 'annotations', version: '20.1.0'
+
+    compileOnly 'org.projectlombok:lombok:1.18.20'
+    annotationProcessor 'org.projectlombok:lombok:1.18.20'
+
+    testCompileOnly 'org.projectlombok:lombok:1.18.20'
+    testAnnotationProcessor 'org.projectlombok:lombok:1.18.20'
+
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.6.0'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine'
 }
